[gd_scene load_steps=53 format=3 uid="uid://dv6pyhevccscg"]

[ext_resource type="Script" path="res://addons/nodot/characters/FirstPerson/FirstPersonCharacter.gd" id="1_4h8r1"]
[ext_resource type="Script" path="res://addons/nodot/characters/FirstPerson/FirstPersonKeyboardInput.gd" id="2_yyfta"]
[ext_resource type="Script" path="res://addons/nodot/characters/FirstPerson/FirstPersonMouseInput.gd" id="3_p64oa"]
[ext_resource type="Script" path="res://addons/nodot/interaction/Interaction3D.gd" id="5_0d045"]
[ext_resource type="Script" path="res://addons/nodot/characters/FirstPerson/FirstPersonViewport.gd" id="5_2jvx4"]
[ext_resource type="Script" path="res://addons/nodot/hud/CrossHair.gd" id="6_id5pd"]
[ext_resource type="PackedScene" uid="uid://v7ppyg7d68lg" path="res://examples/fps/weapon_models/pistol.tscn" id="6_k56ep"]
[ext_resource type="Texture2D" uid="uid://cmgwrfye3qyl6" path="res://examples/fps/materials/crosshair.png" id="7_unppw"]
[ext_resource type="Script" path="res://addons/nodot/characters/FirstPerson/FirstPersonItem.gd" id="8_15eoi"]
[ext_resource type="Script" path="res://addons/nodot/characters/FirstPerson/FirstPersonIronSight.gd" id="9_mhfuw"]
[ext_resource type="Script" path="res://addons/nodot/weapons/HitScan3D.gd" id="10_apqjf"]
[ext_resource type="Script" path="res://addons/nodot/weapons/BulletHole.gd" id="11_lo0jv"]
[ext_resource type="Material" uid="uid://cqqc5qihe1i76" path="res://examples/fps/materials/bullethole.tres" id="11_op62p"]
[ext_resource type="Script" path="res://addons/nodot/weapons/Magazine.gd" id="12_hk1bj"]
[ext_resource type="Script" path="res://addons/nodot/sound/SFXPlayer3D.gd" id="15_kxtrg"]
[ext_resource type="AudioStream" uid="uid://bwfk4u8pcgxb" path="res://examples/fps/sfx/fire.mp3" id="16_cuws3"]
[ext_resource type="AudioStream" uid="uid://0dsw5hfhysth" path="res://examples/fps/sfx/dryfire.mp3" id="17_qbvi5"]
[ext_resource type="AudioStream" uid="uid://d34ui0t3lbb6s" path="res://examples/fps/sfx/reload.mp3" id="17_x25oq"]
[ext_resource type="PackedScene" uid="uid://khwil2vsmiey" path="res://examples/fps/weapon_models/p90.tscn" id="19_s013s"]
[ext_resource type="PackedScene" uid="uid://2mid4cel5j2r" path="res://examples/fps/weapon_models/rpg.tscn" id="19_vfcli"]
[ext_resource type="Script" path="res://addons/nodot/weapons/ProjectileEmitter3D.gd" id="20_jlvx1"]
[ext_resource type="Script" path="res://addons/nodot/weapons/Projectile3D.gd" id="21_uyk2t"]
[ext_resource type="PackedScene" uid="uid://6pdowc3cdf6t" path="res://examples/fps/weapon_models/rocket.tscn" id="22_4olq1"]
[ext_resource type="AudioStream" uid="uid://cg2rdrr0nuoq1" path="res://examples/fps/sfx/thruster.mp3" id="23_eltmd"]
[ext_resource type="AudioStream" uid="uid://ld41plf7jnph" path="res://examples/fps/sfx/rpg_fire.mp3" id="24_g828x"]
[ext_resource type="Script" path="res://addons/nodot/weapons/Explosion3D.gd" id="25_fupwb"]
[ext_resource type="AudioStream" uid="uid://cry70fydc4b4p" path="res://examples/fps/sfx/explosion.mp3" id="26_63hhn"]
[ext_resource type="AudioStream" uid="uid://cwf2spvgp8r2f" path="res://examples/fps/sfx/underwater_ambience.mp3" id="29_fa7xe"]
[ext_resource type="Script" path="res://addons/nodot/detection/StepUp3D.gd" id="30_11fwe"]
[ext_resource type="Script" path="res://addons/nodot/characters/FirstPerson/FirstPersonSubmerged.gd" id="30_i1ec3"]
[ext_resource type="Script" path="res://addons/nodot/sound/FootStepSFX3D.gd" id="31_uugiq"]
[ext_resource type="AudioStream" uid="uid://c8df3qhkj5rlm" path="res://examples/fps/sfx/footsteps/concrete1.mp3" id="32_6wbgj"]
[ext_resource type="AudioStream" uid="uid://bxv35s54p7pyp" path="res://examples/fps/sfx/footsteps/concrete2.mp3" id="33_tvmg1"]
[ext_resource type="AudioStream" uid="uid://cpmfwg6l3nhok" path="res://examples/fps/sfx/footsteps/concrete3.mp3" id="34_7c6pe"]
[ext_resource type="AudioStream" uid="uid://qjiac3u5o816" path="res://examples/fps/sfx/footsteps/concrete4.mp3" id="35_we0gd"]
[ext_resource type="AudioStream" uid="uid://sr7jij6555s4" path="res://examples/fps/sfx/footsteps/concrete5.mp3" id="36_v181c"]
[ext_resource type="AudioStream" uid="uid://daoqcit24kmk1" path="res://examples/fps/sfx/footsteps/grass1.mp3" id="37_fra87"]
[ext_resource type="AudioStream" uid="uid://bswv5741m427c" path="res://examples/fps/sfx/footsteps/grass2.mp3" id="38_latv8"]
[ext_resource type="AudioStream" uid="uid://y8ls43o6k1ov" path="res://examples/fps/sfx/footsteps/grass3.mp3" id="39_gixma"]
[ext_resource type="AudioStream" uid="uid://vxh7cxpcqgld" path="res://examples/fps/sfx/footsteps/grass4.mp3" id="40_dd2w8"]

[sub_resource type="GDScript" id="GDScript_fhr4g"]
resource_name = "pistol"
script/source = "extends Node3D

@export var magazine_node: Magazine

func _ready():
  magazine_node.connect(\"discharged\", action)
  
func action():
  $AnimationPlayer.play(\"fire\")
"

[sub_resource type="GDScript" id="GDScript_ny5p1"]
resource_name = "p90"
script/source = "extends Node3D

@export var magazine_node: Magazine

func _ready():
  magazine_node.connect(\"discharged\", action)
  magazine_node.connect(\"reloading\", reload)
  
func action():
  $AnimationPlayer.play(\"fire\")

func reload():
  $AnimationPlayer.play(\"reload\")
"

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_sjatb"]
points = PackedVector3Array(-1.40712, -0.276069, -0.0621106, -1.35594, 0.290274, 0.00906006, -0.952838, -0.151753, 0.290671, 2.26582, -0.0310801, -0.0712833, -1.46135, 0.0452376, -0.280587, -2.76352, 0.0492632, 0.0492632, -0.992715, 0.169999, 0.290671, 2.26582, 0.0492632, 0.0492632, -0.952838, 0.290671, -0.151753, -1.38121, -0.165079, -0.234821, 2.26582, -0.0712833, 0.0492632, -0.992715, 0.290671, 0.169999, -2.76352, -0.0712833, 0.00906006, -1.5029, -0.245411, 0.154489, -2.72315, 0.0492632, -0.0712833, 2.26582, 0.0492632, -0.0712833, -1.50869, -0.100429, 0.264706, -2.72315, -0.0712833, -0.0712833, 2.0241, 0.00906006, 0.0895294, 2.0241, 0.0895294, 0.00906006, -1.5029, 0.154489, -0.245411, 2.0241, -0.0712833, -0.0712833, -1.48107, -0.0276481, -0.285297, -1.46135, -0.280587, 0.0452376, -1.38121, -0.234821, -0.165079, -1.50869, 0.264706, -0.100429, -1.59988, 0.00906006, 0.26814, -1.56838, 0.15367, 0.225919, -2.72315, -0.0712833, 0.0492632, -1.56838, 0.225919, 0.15367, -1.5999, 0.268144, 0.00906006, -1.33719, -0.0945273, -0.267389)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gwhf4"]
emission_shape = 1
emission_sphere_radius = 0.2
gravity = Vector3(0, 1, 0)

[sub_resource type="Gradient" id="Gradient_d4xo3"]
offsets = PackedFloat32Array(0, 0.562753)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_tgtjs"]
frequency = 0.022

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_chcbn"]
seamless = true
color_ramp = SubResource("Gradient_d4xo3")
noise = SubResource("FastNoiseLite_tgtjs")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k3wjv"]
transparency = 1
albedo_texture = SubResource("NoiseTexture2D_chcbn")

[sub_resource type="SphereMesh" id="SphereMesh_1xoyl"]
material = SubResource("StandardMaterial3D_k3wjv")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5gmd7"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_wgoe5"]

[sub_resource type="GDScript" id="GDScript_ewv7c"]
resource_name = "submergesound"
script/source = "extends Node

var audio_bus_index = AudioServer.get_bus_index(\"Master\")

func _ready() -> void:
  get_parent().connect(\"head_submerged\", submerge)
  get_parent().connect(\"head_surfaced\", surface)

func submerge() -> void:
  AudioServer.set_bus_effect_enabled(audio_bus_index, 0, true)
  $Ambience.play()
  
func surface() -> void:
  AudioServer.set_bus_effect_enabled(audio_bus_index, 0, false)
  $Ambience.stop()
"

[node name="FirstPersonCharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_4h8r1")
head_position = Vector3(0, 0.542, 0)

[node name="FirstPersonKeyboardInput" type="Node" parent="."]
script = ExtResource("2_yyfta")

[node name="FirstPersonMouseInput" type="Node" parent="."]
script = ExtResource("3_p64oa")

[node name="FirstPersonViewport" type="SubViewportContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_2jvx4")

[node name="RayCast3D" type="RayCast3D" parent="FirstPersonViewport"]
target_position = Vector3(0, 0, -50)

[node name="Interaction3D" type="RayCast3D" parent="FirstPersonViewport"]
target_position = Vector3(0, 0, -2)
script = ExtResource("5_0d045")

[node name="Pistol" type="Node3D" parent="FirstPersonViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.755, -0.652, -1.212)
script = ExtResource("8_15eoi")
active = true

[node name="Pistol" parent="FirstPersonViewport/Pistol" node_paths=PackedStringArray("magazine_node") instance=ExtResource("6_k56ep")]
transform = Transform3D(-4.28372e-09, 0, 0.098, 0, 0.098, 0, -0.098, 0, -4.28372e-09, 0, 0, 0)
script = SubResource("GDScript_fhr4g")
magazine_node = NodePath("../Magazine")

[node name="FirstPersonIronSight" type="Node3D" parent="FirstPersonViewport/Pistol"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.297468, 0.583277)
script = ExtResource("9_mhfuw")

[node name="HitScan3D" type="Node3D" parent="FirstPersonViewport/Pistol" node_paths=PackedStringArray("raycast")]
script = ExtResource("10_apqjf")
enabled = true
raycast = NodePath("../../RayCast3D")
accuracy = 10.0
damage = 12.0
damage_distance_reduction = 1.0
applied_force = 4.0

[node name="Magazine" type="Node" parent="FirstPersonViewport/Pistol"]
script = ExtResource("12_hk1bj")
supply_count = 10
rounds_left = 10

[node name="BulletHole" type="Node3D" parent="FirstPersonViewport/Pistol"]
script = ExtResource("11_lo0jv")
textures = Array[StandardMaterial3D]([ExtResource("11_op62p")])

[node name="ActionSFXPlayer" type="AudioStreamPlayer3D" parent="FirstPersonViewport/Pistol" node_paths=PackedStringArray("trigger_node")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.637575, 0, 0)
script = ExtResource("15_kxtrg")
sfx = Array[AudioStream]([ExtResource("16_cuws3")])
trigger_node = NodePath("../Magazine")
trigger_signal = "discharged"

[node name="ReloadSFXPlayer" type="AudioStreamPlayer3D" parent="FirstPersonViewport/Pistol" node_paths=PackedStringArray("trigger_node")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.680219, 0, 0)
script = ExtResource("15_kxtrg")
sfx = Array[AudioStream]([ExtResource("17_x25oq")])
trigger_node = NodePath("../Magazine")
trigger_signal = "reloading"

[node name="DryfireSFXPlayer" type="AudioStreamPlayer3D" parent="FirstPersonViewport/Pistol" node_paths=PackedStringArray("trigger_node")]
script = ExtResource("15_kxtrg")
sfx = Array[AudioStream]([ExtResource("17_qbvi5")])
trigger_node = NodePath("../Magazine")
trigger_signal = "magazine_depleted"

[node name="CrossHair" type="Node2D" parent="FirstPersonViewport/Pistol"]
modulate = Color(1, 1, 1, 0.435294)
script = ExtResource("6_id5pd")
crosshair_sprite = ExtResource("7_unppw")

[node name="P90" type="Node3D" parent="FirstPersonViewport" node_paths=PackedStringArray("magazine_node", "hitscan_node", "bullethole_node")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.770482, -0.595652, -1.25501)
visible = false
script = ExtResource("8_15eoi")
magazine_node = NodePath("Magazine")
hitscan_node = NodePath("HitScan3D")
bullethole_node = NodePath("BulletHole")

[node name="P90" parent="FirstPersonViewport/P90" node_paths=PackedStringArray("magazine_node") instance=ExtResource("19_s013s")]
transform = Transform3D(0.148, 0, 0, 0, 0.148, 0, 0, 0, 0.148, 0, 0, 0)
script = SubResource("GDScript_ny5p1")
magazine_node = NodePath("../Magazine")

[node name="FirstPersonIronSight" type="Node3D" parent="FirstPersonViewport/P90"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0118084, 0.24724, 0.620925)
script = ExtResource("9_mhfuw")

[node name="HitScan3D" type="Node3D" parent="FirstPersonViewport/P90" node_paths=PackedStringArray("raycast")]
script = ExtResource("10_apqjf")
enabled = true
raycast = NodePath("../../RayCast3D")
accuracy = 25.0
damage = 15.0
damage_distance_reduction = 2.0

[node name="Magazine" type="Node" parent="FirstPersonViewport/P90"]
script = ExtResource("12_hk1bj")
capacity = 30
supply_count = 90
supply_count_limit = 120
fire_rate = 0.07
reload_time = 2.0
rounds_left = 30

[node name="BulletHole" type="Node3D" parent="FirstPersonViewport/P90"]
script = ExtResource("11_lo0jv")
textures = Array[StandardMaterial3D]([ExtResource("11_op62p")])

[node name="CrossHair" type="Node2D" parent="FirstPersonViewport/P90"]
visible = false
script = ExtResource("6_id5pd")
crosshair_sprite = ExtResource("7_unppw")

[node name="RPG" type="Node3D" parent="FirstPersonViewport" node_paths=PackedStringArray("magazine_node", "projectile_emitter_node")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.611194, -0.309441, -0.638182)
visible = false
script = ExtResource("8_15eoi")
magazine_node = NodePath("Magazine")
projectile_emitter_node = NodePath("ProjectileEmitter3D")

[node name="rpg" parent="FirstPersonViewport/RPG" instance=ExtResource("19_vfcli")]
transform = Transform3D(-1.39876e-08, 0, -0.32, 0, 0.32, 0, 0.32, 0, -1.39876e-08, 0, 0, 0)

[node name="FirstPersonIronSight" type="Node3D" parent="FirstPersonViewport/RPG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.133028, 0.569705)
script = ExtResource("9_mhfuw")

[node name="Magazine" type="Node" parent="FirstPersonViewport/RPG"]
script = ExtResource("12_hk1bj")
capacity = 3
supply_count = 3
supply_count_limit = 9
fire_rate = 3.0
reload_time = 5.0
rounds_left = 3

[node name="FiredSFX" type="AudioStreamPlayer3D" parent="FirstPersonViewport/RPG" node_paths=PackedStringArray("trigger_node")]
script = ExtResource("15_kxtrg")
sfx = Array[AudioStream]([ExtResource("24_g828x")])
trigger_node = NodePath("../Magazine")
trigger_signal = "discharged"

[node name="ProjectileEmitter3D" type="Node3D" parent="FirstPersonViewport/RPG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.19833)
script = ExtResource("20_jlvx1")
accuracy = 1.0

[node name="Projectile3D" type="RigidBody3D" parent="FirstPersonViewport/RPG/ProjectileEmitter3D"]
gravity_scale = 0.0
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("21_uyk2t")
lifespan = 5.0
destroy_on_impact = true

[node name="rocket" parent="FirstPersonViewport/RPG/ProjectileEmitter3D/Projectile3D" instance=ExtResource("22_4olq1")]
transform = Transform3D(-1.39876e-08, 0, -0.32, 0, 0.32, 0, 0.32, 0, -1.39876e-08, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="FirstPersonViewport/RPG/ProjectileEmitter3D/Projectile3D"]
transform = Transform3D(-1.39876e-08, 0, -0.32, 0, 0.32, 0, 0.32, 0, -1.39876e-08, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_sjatb")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="FirstPersonViewport/RPG/ProjectileEmitter3D/Projectile3D"]
stream = ExtResource("23_eltmd")
autoplay = true
doppler_tracking = 2

[node name="Explosion3D" type="Node3D" parent="FirstPersonViewport/RPG/ProjectileEmitter3D/Projectile3D"]
script = ExtResource("25_fupwb")
effect_time = 2.0
max_force = 6.0

[node name="GPUParticles3D" type="GPUParticles3D" parent="FirstPersonViewport/RPG/ProjectileEmitter3D/Projectile3D/Explosion3D"]
amount = 6
process_material = SubResource("ParticleProcessMaterial_gwhf4")
draw_pass_1 = SubResource("SphereMesh_1xoyl")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="FirstPersonViewport/RPG/ProjectileEmitter3D/Projectile3D/Explosion3D"]
stream = ExtResource("26_63hhn")
autoplay = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_5gmd7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_wgoe5")

[node name="FirstPersonSubmerged" type="Node" parent="."]
script = ExtResource("30_i1ec3")
submerge_speed_divider = 5.0

[node name="SubmergeSound" type="Node" parent="FirstPersonSubmerged"]
script = SubResource("GDScript_ewv7c")

[node name="Ambience" type="AudioStreamPlayer" parent="FirstPersonSubmerged/SubmergeSound"]
stream = ExtResource("29_fa7xe")

[node name="StepUp3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.991578, 0)
script = ExtResource("30_11fwe")

[node name="RayCast3D" type="RayCast3D" parent="StepUp3D"]
target_position = Vector3(0, 0, -0.6)

[node name="FootStepSFX" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.864601, 0)
script = ExtResource("31_uugiq")
frequency = null

[node name="Concrete" type="AudioStreamPlayer3D" parent="FootStepSFX"]
script = ExtResource("15_kxtrg")
sfx = Array[AudioStream]([ExtResource("32_6wbgj"), ExtResource("33_tvmg1"), ExtResource("34_7c6pe"), ExtResource("35_we0gd"), ExtResource("36_v181c")])

[node name="Grass" type="AudioStreamPlayer3D" parent="FootStepSFX"]
script = ExtResource("15_kxtrg")
sfx = Array[AudioStream]([ExtResource("37_fra87"), ExtResource("38_latv8"), ExtResource("39_gixma"), ExtResource("40_dd2w8")])
